# carsnbids-auctions-processor

./: .gitignore  README.md  main.py  pyproject.toml
airflow/dags/: etl_dag.py
airflow/dags/etl_scripts/: extract.py  load.py  transform.py
airflow/dags/scraper/: save_auctions.py  scrape_auction.py  scrape_auction_urls.py  setup.py
airflow/dags/sql/: create_tables.sql  empty_staging.sql  load_auction_states.sql  load_tables.sql
src/: airflow_connections.py  start_airflow.sh  stop_airflow.sh
src/notebooks/: load.ipynb  transform.ipynb
