[project]
name = "carsnbids-local"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "xmlsec==1.3.13",
    "apache-airflow[amazon]>=3.0.1",
    "apache-airflow-providers-fab>=2.0.2",
    "pandas~=2.2.0",
    "psycopg2-binary>=2.9.10",
    "requests>=2.32.3",
    "selenium>=4.32.0",
    "apache-airflow-providers-postgres>=6.2.0",
    "apache-airflow-providers-common-sql>=1.27.1",
    "sqlalchemy>=1.4.54",
    "beautifulsoup4>=4.13.4",
    "webdriver-manager>=4.0.2",
    
    
]
